<resources>
    <string name="app_name">IRZ Android-client</string>
    <string name="welcome_message">Добро пожаловать в ЕЦК ИРЗ!</string>
    <string name="auth_btn_await_message">Секундочку</string>
    <string name="auth_missing_email">Не забудьте указать почту!</string>
    <string name="auth_missing_password">Обязательно укажите пароль!</string>
    <string name="auth_failure_message">Мы Вас не узнали, попробуйте ещё раз!</string>
    <string name="auth_error_message">Нет связи с сервером!</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="main_logo">ЕЦК ИРЗ</string>

    <string name="news_button_description">Кнопка Новости</string>
    <string name="message_button_description">Кнопка Сообщения</string>
    <string name="search_button_description">Кнопка Поиск</string>
    <string name="calendar_button_description">Кнопка События</string>
    <string name="profile_button_description">Кнопка Личный кабинет</string>
    <string name="profile_surname_placeholder">Нечаев</string>
    <string name="profile_name_placeholder">Сергей</string>
    <string name="profile_patronymic_placeholder">Батикович</string>
    <string name="profile_position_placeholder">Генеральный директор ИРЗ</string>
    <string name="profile_about_myself_placeholder">Бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла  бла бла…</string>
    <string name="profile_my_doings_placeholder">Бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла  бла бла…</string>
    <string name="like_button_description">Кнопка лайка</string>
    <string name="comment_button_description">Кнопка комментариев</string>
    <string name="write_news_button_description">Кнопка написания новости</string>

    <string name="news_name">Новости</string>
    <string name="news_title_placeholder">Название новости</string>
    <string name="news_author_name_placeholder">Нечаев Сергей</string>
    <string name="news_author_image_description">Картинка</string>
    <string name="news_text_placeholder">Бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла  бла бла…</string>
    <string name="news_datetime_placeholder">24.02.2022, 13:37</string>
    <string name="news_image_description">Картинка</string>
    <string name="add_image_text">Добавить изображение</string>
    <string name="remove_image_text">Убрать изображение</string>
    <string name="post_news_button">Опубликовать</string>
    <string name="post_news_missing_header">Укажите заголовок!</string>
    <string name="post_news_missing_text">Укажите текст новости!</string>
    <string name="post_news_image_load_error">Проблема с загрузкой изображения…</string>
    <string name="post_news_error_on_post">Не удалось загрузить новость…</string>
    <string name="public_news_switch">Публичная новость? </string>
    <string name="enable_public_news">Да</string>
    <string name="disable_public_news">Нет</string>
    <string name="profile_action_logo_description">лого кнопки профиля</string>
    <string name="profile_about_myself">О себе</string>
    <string name="profile_my_doings">Чем занимаюсь</string>
    <string name="profile_birthday">Дата рождения: </string>
    <string name="profile_birthday_placeholder">16.03.2001</string>
    <string name="profile_skills">Навыки/компетенции</string>

    <string name="common_on_load_error">Произошла ошибка при загрузке информации</string>
    <string name="common_on_image_upload_error">Проблема с загрузкой изображения…</string>
    <string name="common_on_empty_fields_left">Вы заполнили не все поля…</string>

    <!--  activity layouts  -->
    <!--  auth_activity  -->
    <string name="auth_activity_title">Вход</string>
    <string name="auth_activity_email_placeholder">petrov@irz.ru</string>
    <string name="auth_activity_password_placeholder">Пароль</string>
    <string name="auth_activity_sign_in_button_title">Войти</string>
    <string name="auth_activity_forgot_password_title">Забыли пароль?</string>
    <string name="auth_activity_forgot_password_message">Укажите почту, мы вышлем вам ссылку для восстановления пароля</string>
    <string name="auth_activity_forgot_password_missing_email">Укажите почту!</string>
    <string name="auth_activity_forgot_password_success">Мы выслали информацию на почту</string>
    <string name="auth_activity_forgot_password_fail">Не удалось отправить информацию на почту…</string>
    <!--  auth_activity  -->

    <!--  search_activity  -->
    <string name="search_activity_name">Поиск</string>
    <string name="search_activity_user_input_hint">Иванов Иван Иванович</string>
    <string name="search_activity_search_button">Поиск</string>
    <string name="search_activity_search_params_button">Параметры</string>
    <string name="search_activity_search_user_name">Нечаев Сергей Анатольевич</string>
    <string name="search_activity_params_name">Параметры</string>
    <string name="search_activity_params_position_name">Должность</string>
    <string name="search_activity_params_role_name">Роль</string>
    <!--  search_activity  -->

    <!--  profile_activity  -->
    <string name="profile_activity_name">Профиль</string>
    <string name="profile_activity_change_info_new_photo_button">Загрузить фото</string>
    <string name="profile_activity_change_info_delete_photo_button">Удалить фото</string>
    <string name="profile_activity_current_position">…</string>
    <string name="profile_activity_about_myself_button">О себе</string>
    <string name="profile_activity_about_news_button">Новости</string>
    <string name="profile_activity_about_career_path_button">Карьерный путь</string>
    <!--  profile_activity  -->

    <!--  messenger_activity  -->
    <string name="messenger_activity_name">Мессенджер</string>
    <string name="messenger_activity_chat_item_user_name">Нечаев Сергей Анатольевич</string>
    <string name="messenger_activity_chat_item_last_message">Какое-то супер-интересное длинное сообщение, вот ещё немного информации, теперь наверно достаточно</string>
    <string name="messenger_activity_chat_item_last_message_date">13:37, 16.02.2001</string>
    <!--  messenger_activity  -->

    <!--  chat_activity  -->
    <string name="chat_activity_message_hint">Сообщение</string>
    <string name="chat_activity_seach_message_hint">Поиск</string>
    <!--  chat_activity  -->

    <!--  news_activity  -->
    <string name="news_activity_search_params_name">Поиск</string>
    <string name="news_activity_search_string_hint">На нашем заводе…</string>
    <string name="news_activity_search_author_name">Автор</string>
    <string name="news_activity_search_public_switch_name">Публичная новость </string>
    <string name="news_activity_search_liked_switch_name">Только понравившиеся </string>
    <!--  news_activity  -->

    <!--  current_news_item_activity  -->
    <string name="current_news_item_acitivity_commentary_hint">Комментарий</string>
    <!--  current_news_item_activity  -->

    <!--  post_news_activity  -->
    <string name="post_news_activity_main_text_hint">Дорогие друзья, сегодня на нашем заводе произошло знаменательное событие, которое…</string>

</resources>