<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/Cool_Grey_3"
                app:cardCornerRadius="15dp"
                app:cardElevation="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/news_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_extrabold"
                        android:hint="@string/news_title_placeholder"
                        android:textColor="@color/Pantone_295_C"
                        android:textSize="24sp"
                        android:autofillHints=""
                        android:inputType="text" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/add_image_button"
                            android:layout_width="wrap_content"
                            android:layout_height="55dp"
                            android:text="@string/add_image_text"
                            android:backgroundTint="@color/Pantone_295_C"/>

                        <Button
                            android:id="@+id/remove_image_button"
                            android:layout_width="wrap_content"
                            android:layout_height="55dp"
                            android:backgroundTint="@color/Pantone_187_C"
                            android:text="@string/remove_image_text" />

                    </LinearLayout>

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/news_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/news_image_description"
                        android:adjustViewBounds="true"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize5Percent"/>

                    <EditText
                        android:id="@+id/news_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/news_text_placeholder"
                        android:textColor="@color/Pantone_289_C"
                        android:textSize="18sp"
                        android:autofillHints="" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/public_news_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_news_switch"
                android:checked="false"
                android:textOff="@string/disable_public_news"
                android:textOn="@string/enable_public_news"
                app:showText="true"
                />

            <Button
                android:id="@+id/post_news_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/Pantone_295_C"
                android:text="@string/post_news_button"
                />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>