<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Выйти"
        app:layout_constraintBottom_toTopOf="@+id/button_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/button_area"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/news_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:backgroundTint="@color/Pantone_289_C"
            android:adjustViewBounds="true"
            android:contentDescription="@string/news_button_description"
            android:scaleType="centerInside"
            android:src="@drawable/news_button" />
        <ImageButton
            android:id="@+id/messages_button"
            android:layout_width="wrap_content"
            android:layout_weight=".20"
            android:layout_height="match_parent"
            android:src="@drawable/message_button"
            android:backgroundTint="@color/Pantone_289_C"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:contentDescription="@string/message_button_description" />
        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_weight=".20"
            android:layout_height="match_parent"
            android:src="@drawable/search_button"
            android:backgroundTint="@color/Pantone_289_C"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:contentDescription="@string/search_button_description" />
        <ImageButton
            android:id="@+id/calendar_button"
            android:layout_width="wrap_content"
            android:layout_weight=".20"
            android:layout_height="match_parent"
            android:src="@drawable/calendar_button"
            android:backgroundTint="@color/Pantone_289_C"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:contentDescription="@string/calendar_button_description" />
        <ImageButton
            android:id="@+id/profile_button"
            android:layout_width="wrap_content"
            android:layout_weight=".20"
            android:layout_height="match_parent"
            android:src="@drawable/profile_button"
            android:backgroundTint="@color/Pantone_289_C"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:contentDescription="@string/profile_button_description" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>